[gd_scene load_steps=9 format=3 uid="uid://h7xcd2k7o1hp"]

[ext_resource type="Texture2D" uid="uid://bkdjckf4lqltl" path="res://peakpx.jpg" id="1_emk7p"]
[ext_resource type="Script" path="res://menu.gd" id="1_n7kwq"]
[ext_resource type="FontFile" uid="uid://c1n50f1jhp3cs" path="res://Good Old DOS.ttf" id="2_hnf6q"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kyt6w"]
texture = ExtResource("1_emk7p")
modulate_color = Color(0.41598, 0.41598, 0.41598, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pm0v5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3etj5"]
bg_color = Color(0.683077, 0.683077, 0.683077, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wpxgn"]
bg_color = Color(0.497474, 0.497474, 0.497474, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7ief5"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 2)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -304.0
offset_top = -224.0
offset_right = -304.0
offset_bottom = -224.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n7kwq")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_kyt6w")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -289.0
offset_top = -99.0
offset_right = 295.0
offset_bottom = 341.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_pm0v5")
theme_override_styles/hover = SubResource("StyleBoxFlat_3etj5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wpxgn")
theme_override_styles/normal = SubResource("StyleBoxFlat_7ief5")
text = "Start menu"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/pressed = SubResource("StyleBoxFlat_7ief5")
theme_override_styles/normal = SubResource("StyleBoxFlat_7ief5")
text = "Options"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/pressed = SubResource("StyleBoxFlat_7ief5")
theme_override_styles/normal = SubResource("StyleBoxFlat_7ief5")
text = "Exit game"

[node name="mopopeli" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -242.5
offset_top = -403.0
offset_right = 242.5
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_fonts/font = ExtResource("2_hnf6q")
theme_override_font_sizes/font_size = 100
text = "Mopopeli
hills"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
